# objsearch_pi

./: .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Plugin.cmake  README.md  appveyor.yml  appveyor_run_with_env.cmd  objsearch.fbp
.circleci/: config.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
buildosx/InstallOSX/: objsearch.pkgproj.in  objsearch_pi.pkgproj.in
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake
debian/: changelog  control  copyright
flatpak/: org.opencpn.OpenCPN.Plugin.objsearch.yaml
include/: ObjSearchDialog.h  clcpopup.h  csv_parser.h  icons.h  objsearch_pi.h
manual/: antora.yml  site.yml
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  nl.po  (+19 more)
sqlite3mc-1.6.0-sqlite-3.41.0-amalgamation/: sqlite3mc.def  sqlite3mc_amalgamation.h
sqlite3mc-1.8.3-sqlite-3.45.1-amalgamation/: sqlite3mc.def  sqlite3mc_amalgamation.h
sqlite3mc-1.8.4-sqlite-3.45.2-amalgamation/: sqlite3mc_amalgamation.h
sqlite3mc-2.2.4-sqlite-3.50.4-amalgamation/: readme-amalgamation.md  shell.c  shell3mc_amalgamation.c  sqlite3mc_amalgamation.h
sqlite3mc-2.2.6-sqlite-3.51.1-amalgamation/: shell.c  shell3mc_amalgamation.c  sqlite3mc.def  sqlite3mc_amalgamation.h
src/: ObjSearchDialog.cpp  ObjSearchDialog.h  clcpopup.cpp  clcpopup.h  csv_parser.cpp  csv_parser.h  icons.cpp  icons.h  icons.sh  objsearch_pi.cpp  objsearch_pi.h
wxsqlite3-3.1.1/src/: wxsqlite3.cpp
wxsqlite3-3.3.0/include/wx/: wxsqlite3.h  wxsqlite3def.h
wxsqlite3-3.5.9/include/wx/: wxsqlite3opt.h
wxsqlite3-3.5.9/src/: wxsqlite3.cpp
wxsqlite3-4.10.12/: readme.md
wxsqlite3-4.10.12/include/wx/: wxsqlite3.h
wxsqlite3-4.10.12/premake/: wxwidgets.lua
wxsqlite3-4.11.1/: .appveyor.yml  Makefile.am  premake5.lua  readme.md
wxsqlite3-4.11.1/samples/: minimal.cpp
wxsqlite3-4.11.1/samples/treeview/: foldertree.cpp  treeviewapp.cpp
wxsqlite3-4.11.1/src/: wxsqlite3.cpp  wxsqlite3_version.rc
wxsqlite3-4.9.10/: readme.md
wxsqlite3-4.9.10/samples/treeview/: treeviewsample.h
wxsqlite3-4.9.10/src/: sqlite3mc_amalgamation.h
wxsqlite3-4.9.11/: LICENCE.txt  readme.md
wxsqlite3-4.9.12/: Makefile.am  premake5.lua  readme.md
wxsqlite3-4.9.12/premake/: wxwidgets.lua
wxsqlite3-4.9.12/samples/: minimal.cpp
wxsqlite3-4.9.2/src/: sqlite3mc_amalgamation.h  wxsqlite3.cpp
wxsqlite3-4.9.9/: .appveyor.yml  premake5.lua  readme.md
wxsqlite3-4.9.9/src/: sqlite3mc_amalgamation.h  wxsqlite3.cpp
(+8 files in other folders)
